# iitg-graph-eta-project

./: .gitignore  Dockerfile  README.md  gnn-phase2.ipynb  gnn.ipynb  main.py  pyproject.toml
data/processed/: corridor_aggregates.csv  frontend_data.json  graph_summary.json  model_benchmark.csv  node_metrics.csv  strategy_memo.md
notebooks/: phase1_data_pipeline.ipynb  phase2_bottleneck_audit.ipynb  phase3_graph_models.ipynb  phase4_ftl_vs_carting.ipynb  phase5_outputs_memo.ipynb
src/: main.py
src/static/: index.html
