[project]
name = "iitg-summer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "node2vec>=0.4.3",
    "numpy>=2.4.4",
    "panda>=0.3.1",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools<70",
    "xgboost>=3.2.0",
]
